--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -15,5 +15,5 @@
     WSGIApplicationGroup %{GLOBAL}
 </Directory>
 
-Alias /portfolio_site/static "/opt/bitnami/python/lib/python3.8/site-packages/django/contrib/admin/static/"
-WSGIScriptAlias /portfolio_sitel '/opt/bitnami/projects/portfolio_site/portfolio_site/wsgi.py'
+Alias /portfolio_site/static "/opt/bitnami/projects/portfolio_site/main/static"
+WSGIScriptAlias /portfolio_site '/opt/bitnami/projects/portfolio_site/portfolio_site/wsgi.py'
