Changing conf files

--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -15,5 +15,5 @@
     WSGIApplicationGroup %{GLOBAL}
 </Directory>
 
-Alias /portfolio_site/static "/opt/bitnami/projects/portfolio_site/main/static"
+Alias /static/ "/opt/bitnami/projects/portfolio_site/main/static"
 WSGIScriptAlias /portfolio_site '/opt/bitnami/projects/portfolio_site/portfolio_site/wsgi.py'
