Changing conf files

--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -15,5 +15,9 @@
     WSGIApplicationGroup %{GLOBAL}
 </Directory>
 
+<Directory "/opt/bitnami/projects/portfolio_site/main/static">
+Require all granted
+</Directory>
+
 Alias /static/ "/opt/bitnami/projects/portfolio_site/main/static"
 WSGIScriptAlias /portfolio_site '/opt/bitnami/projects/portfolio_site/portfolio_site/wsgi.py'
