Reseting config files

--- a/conf/httpd-app.conf
+++ b/conf/httpd-app.conf
@@ -3,7 +3,7 @@
       WSGIDaemonProcess wsgi-djangostack   processes=2 threads=15    display-name=%{GROUP}
 </IfDefine>
 
-<Directory "/opt/bitnami/portfolio_site/portfolio_site">
+<Directory "/opt/bitnami/projects/portfolio_site">
     Options +MultiViews
     AllowOverride All
     <IfVersion >= 2.3>
@@ -15,9 +15,5 @@
     WSGIApplicationGroup %{GLOBAL}
 </Directory>
 
-<Directory "/opt/bitnami/projects/portfolio_site/main/static">
-Require all granted
-</Directory>
-
-Alias /static/ "/opt/bitnami/projects/portfolio_site/main/static"
+Alias /portfolio_site/static "/opt/bitnami/python/lib/python3.8/site-packages/django/contrib/admin/static/"
 WSGIScriptAlias /portfolio_site '/opt/bitnami/projects/portfolio_site/portfolio_site/wsgi.py'
